err/mzgtfs-tools.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mzgtfs'...
Compiling './lib/python3.5/site-packages/mzgtfs/export.py'...
***   File "./lib/python3.5/site-packages/mzgtfs/export.py", line 17
    print "===== GTFS: %s ====="%g.filename
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mzgtfs/feed.py'...
***   File "./lib/python3.5/site-packages/mzgtfs/feed.py", line 58
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mzgtfs/shape.py'...
***   File "./lib/python3.5/site-packages/mzgtfs/shape.py", line 51
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mzgtfs/stop.py'...
***   File "./lib/python3.5/site-packages/mzgtfs/stop.py", line 35
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mzgtfs/validation.py'...
***   File "./lib/python3.5/site-packages/mzgtfs/validation.py", line 20
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mzgtfs-0.10.4.egg-info'...
Listing './lib/python3.5/site-packages/mzgtfs-tools'...
Compiling './lib/python3.5/site-packages/mzgtfs-tools/add_fares.py'...
***   File "./lib/python3.5/site-packages/mzgtfs-tools/add_fares.py", line 58
    print " processing regex " + rules['route_regex']
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mzgtfs-tools/add_feed_id.py'...
***   File "./lib/python3.5/site-packages/mzgtfs-tools/add_feed_id.py", line 31
    print "adding feed_id " + feed_id +" to " + gtfs_file
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mzgtfs-tools/headsign_fixer.py'...
***   File "./lib/python3.5/site-packages/mzgtfs-tools/headsign_fixer.py", line 26
    print "updating shape " + shape_id + " to " + new_headsign
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mzgtfs-tools/remove_invalid_transfers.py'...
***   File "./lib/python3.5/site-packages/mzgtfs-tools/remove_invalid_transfers.py", line 54
    print "usage: fix_transfers.py gtfs_file"
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mzgtfs-tools/rename_agency_and_feed.py'...
***   File "./lib/python3.5/site-packages/mzgtfs-tools/rename_agency_and_feed.py", line 25
    print "changing agency "+aid.id()+" to "+new_agency+" and adding feed_id " + feed_id +"."
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mzgtfs-tools/rename_route_id.py'...
***   File "./lib/python3.5/site-packages/mzgtfs-tools/rename_route_id.py", line 32
    print "Usage: rename_route_id.py <original_route_id> <new_route_id>"
                                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mzgtfs-tools/route_splitter.py'...
***   File "./lib/python3.5/site-packages/mzgtfs-tools/route_splitter.py", line 38
    print "adding route " + routeInfo['route_id']
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mzgtfs-tools/simple_agency_remove.py'...
***   File "./lib/python3.5/site-packages/mzgtfs-tools/simple_agency_remove.py", line 11
    print "usage: simple_agency_remove.py gtfs_file"
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mzgtfs-tools/test_add_fares.py'...
***   File "./lib/python3.5/site-packages/mzgtfs-tools/test_add_fares.py", line 46
    print repr(input_json)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mzgtfs-tools/test_make_all_accessible.py'...
***   File "./lib/python3.5/site-packages/mzgtfs-tools/test_make_all_accessible.py", line 19
    print self.f.stops()[0].json()
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mzgtfs-tools/transfer_expander.py'...
***   File "./lib/python3.5/site-packages/mzgtfs-tools/transfer_expander.py", line 31
    for
       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mzgtfs_tools-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/plac-0.9.6.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/unicodecsv'...
Listing './lib/python3.5/site-packages/unicodecsv-0.14.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
